_generated-doc/3.6/config/quarkus-oidc-client-filter-oidc-client-filter-config.adoc

:summaryTableId: quarkus-oidc-client-filter-oidc-client-filter-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-client-filter-oidc-client-filter-config_configuration]]link:#quarkus-oidc-client-filter-oidc-client-filter-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-oidc-client-filter-oidc-client-filter-config_quarkus.oidc-client-filter.register-filter]]`link:#quarkus-oidc-client-filter-oidc-client-filter-config_quarkus.oidc-client-filter.register-filter[quarkus.oidc-client-filter.register-filter]`


[.description]
--
Enable OidcClientRequestFilter for all the injected MP RestClient implementations. If this property is disabled then OidcClientRequestFilter has to be registered as an MP RestClient provider.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_FILTER_REGISTER_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_FILTER_REGISTER_FILTER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-client-filter-oidc-client-filter-config_quarkus.oidc-client-filter.client-name]]`link:#quarkus-oidc-client-filter-oidc-client-filter-config_quarkus.oidc-client-filter.client-name[quarkus.oidc-client-filter.client-name]`


[.description]
--
Name of the configured OidcClient used by the OidcClientRequestFilter. You can override this configuration for individual MP RestClient with the `io.quarkus.oidc.client.filter.OidcClientFilter` annotation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_FILTER_CLIENT_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_FILTER_CLIENT_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===